test/regex/elliot/check-re2-none-compiler-error.good
check-re2-none-compiler-error.chpl:2: error: Cannot use Regex with CHPL_RE2=none
