test/regex/elliot/check-re2-none-compiler-error.chpl
use Regex;
var myRegex = compile("a+");
